scripts/nullness/wpi/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8.txt
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:27: error: (method.invocation) $$ 3 $$ getFactorial(int) $$ @UnderInitialization @NonNull CombinationGenerator $$ @Initialized @NonNull CombinationGenerator $$ ( 493, 508 ) $$ call to getFactorial(int) not allowed on the given receiver.
		BigInteger nFact = getFactorial(n);
		                               ^
  found   : @UnderInitialization @NonNull CombinationGenerator
  required: @Initialized @NonNull CombinationGenerator
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:28: error: (method.invocation) $$ 3 $$ getFactorial(int) $$ @UnderInitialization @NonNull CombinationGenerator $$ @Initialized @NonNull CombinationGenerator $$ ( 531, 546 ) $$ call to getFactorial(int) not allowed on the given receiver.
		BigInteger rFact = getFactorial(r);
		                               ^
  found   : @UnderInitialization @NonNull CombinationGenerator
  required: @Initialized @NonNull CombinationGenerator
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:29: error: (method.invocation) $$ 3 $$ getFactorial(int) $$ @UnderInitialization @NonNull CombinationGenerator $$ @Initialized @NonNull CombinationGenerator $$ ( 575, 594 ) $$ call to getFactorial(int) not allowed on the given receiver.
		BigInteger nminusrFact = getFactorial(n - r);
		                                     ^
  found   : @UnderInitialization @NonNull CombinationGenerator
  required: @Initialized @NonNull CombinationGenerator
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:31: error: (method.invocation) $$ 3 $$ reset() $$ @UnderInitialization(com.merriampark.Gilleland.CombinationGenerator.class) @NonNull CombinationGenerator $$ @Initialized @NonNull CombinationGenerator $$ ( 651, 658 ) $$ call to reset() not allowed on the given receiver.
		reset();
		     ^
  found   : @UnderInitialization(com.merriampark.Gilleland.CombinationGenerator.class) @NonNull CombinationGenerator
  required: @Initialized @NonNull CombinationGenerator
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:52: error: (dereference.of.nullable) $$ 1 $$ numLeft $$ ( 1084, 1091 ) $$ dereference of possibly-null reference numLeft
		if (numLeft.equals(total)) {
		    ^
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:92: error: (dereference.of.nullable) $$ 1 $$ numLeft $$ ( 1819, 1826 ) $$ dereference of possibly-null reference numLeft
		return numLeft.compareTo(BigInteger.ZERO) == 1;
		       ^
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:231: error: (dereference.of.nullable) $$ 1 $$ sigma $$ ( 5282, 5287 ) $$ dereference of possibly-null reference sigma
		for (Iterator<?> i = sigma.iterator(); i.hasNext();) {
		                     ^
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:234: error: (dereference.of.nullable) $$ 1 $$ o $$ ( 5365, 5366 ) $$ dereference of possibly-null reference o
			symbols.add(o.toString());
			            ^
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:485: error: (argument) $$ 4 $$ sigma $$ InterpretationBase constructor $$ @Initialized @MonotonicNonNull Signature $$ @Initialized @NonNull Signature $$ ( 13039, 13044 ) $$ incompatible argument for parameter sigma of InterpretationBase constructor.
		Interpretation interpretation = new InterpretationBase(sigma, intermap);
		                                                       ^
  found   : @Initialized @MonotonicNonNull Signature
  required: @Initialized @NonNull Signature
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:486: error: (argument) $$ 4 $$ F $$ ClassicalLogic.satisfy $$ @Initialized @MonotonicNonNull Formula $$ @Initialized @NonNull Formula $$ ( 13109, 13116 ) $$ incompatible argument for parameter F of ClassicalLogic.satisfy.
		boolean satisfied = logic.satisfy(interpretation, formula);
		                                                  ^
  found   : @Initialized @MonotonicNonNull Formula
  required: @Initialized @NonNull Formula
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:502: error: (dereference.of.nullable) $$ 1 $$ o $$ ( 13467, 13468 ) $$ dereference of possibly-null reference o
				symbols.add(o.toString());
				            ^
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/defaultLogic/WorldSet.java:17: error: (method.invocation) $$ 3 $$ addFormula(java.lang.String) $$ @UnderInitialization(be.fnord.util.logic.defaultLogic.WorldSet.class) @NonNull WorldSet $$ @Initialized @NonNull WorldSet $$ ( 388, 417 ) $$ call to addFormula(java.lang.String) not allowed on the given receiver.
		addFormula(a.e.EMPTY_FORMULA); // We assume that empty is true (this is
		          ^
  found   : @UnderInitialization(be.fnord.util.logic.defaultLogic.WorldSet.class) @NonNull WorldSet
  required: @Initialized @NonNull WorldSet
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/AbductionReasoner.java:31: error: (method.invocation) $$ 3 $$ _AbductionReasoner(java.lang.String,java.util.LinkedList<java.lang.String>,java.lang.String) $$ @UnderInitialization(be.fnord.util.logic.AbductionReasoner.class) @NonNull AbductionReasoner $$ @Initialized @NonNull AbductionReasoner $$ ( 806, 852 ) $$ call to _AbductionReasoner(java.lang.String,java.util.LinkedList<java.lang.String>,java.lang.String) not allowed on the given receiver.
		_AbductionReasoner(_kb, _facts, _observations);
		                  ^
  found   : @UnderInitialization(be.fnord.util.logic.AbductionReasoner.class) @NonNull AbductionReasoner
  required: @Initialized @NonNull AbductionReasoner
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/AbductionReasoner.java:36: error: (method.invocation) $$ 3 $$ _AbductionReasoner(java.lang.String,java.util.LinkedList<java.lang.String>,java.lang.String) $$ @UnderInitialization(be.fnord.util.logic.AbductionReasoner.class) @NonNull AbductionReasoner $$ @Initialized @NonNull AbductionReasoner $$ ( 952, 998 ) $$ call to _AbductionReasoner(java.lang.String,java.util.LinkedList<java.lang.String>,java.lang.String) not allowed on the given receiver.
		_AbductionReasoner(_kb, _facts, _observations);
		                  ^
  found   : @UnderInitialization(be.fnord.util.logic.AbductionReasoner.class) @NonNull AbductionReasoner
  required: @Initialized @NonNull AbductionReasoner
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:86: error: (method.invocation) $$ 3 $$ _DefaultReasoner(be.fnord.util.logic.defaultLogic.WorldSet,be.fnord.util.logic.defaultLogic.RuleSet) $$ @UnderInitialization(be.fnord.util.logic.DefaultReasoner.class) @NonNull DefaultReasoner $$ @Initialized @NonNull DefaultReasoner $$ ( 2505, 2539 ) $$ call to _DefaultReasoner(be.fnord.util.logic.defaultLogic.WorldSet,be.fnord.util.logic.defaultLogic.RuleSet) not allowed on the given receiver.
		_DefaultReasoner(myWorld, myRules);
		                ^
  found   : @UnderInitialization(be.fnord.util.logic.DefaultReasoner.class) @NonNull DefaultReasoner
  required: @Initialized @NonNull DefaultReasoner
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:90: error: (method.invocation) $$ 3 $$ _DefaultReasoner(be.fnord.util.logic.defaultLogic.WorldSet,be.fnord.util.logic.defaultLogic.RuleSet) $$ @UnderInitialization(be.fnord.util.logic.DefaultReasoner.class) @NonNull DefaultReasoner $$ @Initialized @NonNull DefaultReasoner $$ ( 2608, 2642 ) $$ call to _DefaultReasoner(be.fnord.util.logic.defaultLogic.WorldSet,be.fnord.util.logic.defaultLogic.RuleSet) not allowed on the given receiver.
		_DefaultReasoner(myWorld, myRules);
		                ^
  found   : @UnderInitialization(be.fnord.util.logic.DefaultReasoner.class) @NonNull DefaultReasoner
  required: @Initialized @NonNull DefaultReasoner
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:103: error: (dereference.of.nullable) $$ 1 $$ world $$ ( 2938, 2943 ) $$ dereference of possibly-null reference world
		WFF myWorld = new WFF(world.getWorld());
		                      ^
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:107: error: (dereference.of.nullable) $$ 1 $$ rules $$ ( 3084, 3089 ) $$ dereference of possibly-null reference rules
		LinkedList<String> consequences = rules.getAllConsequences(myWorld);
		                                  ^
18 errors
